fix overflow

--- a/app/assets/stylesheets/listing_show.scss
+++ b/app/assets/stylesheets/listing_show.scss
@@ -51,6 +51,8 @@
 
 #listing-header-info {
   margin-left: 5%;
+  width: 500px;
+  overflow: scroll;
 }
 
 #listing-show-title {
